--- a/thesis_tools/readme.org
+++ b/thesis_tools/readme.org
@@ -38,6 +38,7 @@ pip install -e git+https://github.com/nilmtk/nilmtk-contrib'#'egg=nilmtk-contrib
 | Python                 |           3.8 |
 | Pandas                 |        0.25.3 |
 | Numpy                  | 1.19.3-1.19.5 |
+| Tensorflow             |         2.7.4 |
 | [[https://github.com/BenjaminFrazer/nilmtk.git][BenjaminFrazer/NILMTK]]* |         0.4.3 |
 | [[https://github.com/nilmtk/nilmtk-contrib][NILMTK-contrib]]**       |         0.1.2 |
 | [[https://github.com/nilmtk/nilm_metadata/][NILM-Metadata]]          |         0.2.4 |
